[gd_scene load_steps=2 format=3 uid="uid://bocuwsyrmf57u"]

[ext_resource type="Script" path="res://classes/player/anchor/anchor.gd" id="1_i5j47"]

[node name="Anchor" type="Marker3D"]
script = ExtResource("1_i5j47")

[node name="TwistPivot" type="Node3D" parent="."]

[node name="PitchPivot" type="Node3D" parent="TwistPivot"]

[node name="CameraAnchor" type="Node3D" parent="TwistPivot/PitchPivot"]
